--- a/Ofis_ISE309.csproj
+++ b/Ofis_ISE309.csproj
@@ -273,7 +273,7 @@
     <Content Include="Views\Shared\_Navbar.cshtml" />
     <Content Include="Scripts\jquery-3.0.0.slim.min.map" />
     <Content Include="Scripts\jquery-3.0.0.min.map" />
-    <Content Include="Views\Departman\Yeni.cshtml" />
+    <Content Include="Views\Departman\DepartmanForm.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
