database hatası düzeltildi.

--- a/Web.config
+++ b/Web.config
@@ -43,6 +43,7 @@
   <connectionStrings>
     <add name="OfisEntities" connectionString="metadata=res://*/Models.EntityFramework.Model1.csdl|res://*/Models.EntityFramework.Model1.ssdl|res://*/Models.EntityFramework.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Ofis;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="OfisEntities1" connectionString="metadata=res://*/Models.EntityFramework.Model1.csdl|res://*/Models.EntityFramework.Model1.ssdl|res://*/Models.EntityFramework.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Ofis;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="OfisEntities2" connectionString="metadata=res://*/Models.EntityFramework.ModelOfis.csdl|res://*/Models.EntityFramework.ModelOfis.ssdl|res://*/Models.EntityFramework.ModelOfis.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=Ofis;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
