--- a/Ofis_ISE309.csproj
+++ b/Ofis_ISE309.csproj
@@ -105,15 +105,15 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Global.asax" />
-    <Content Include="Models\EntityFramework\Model1.Context.tt">
+    <Content Include="Models\EntityFramework\ModelOfis.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model1.Context.cs</LastGenOutput>
+      <DependentUpon>ModelOfis.edmx</DependentUpon>
+      <LastGenOutput>ModelOfis.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Models\EntityFramework\Model1.tt">
+    <Content Include="Models\EntityFramework\ModelOfis.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>Model1.edmx</DependentUpon>
-      <LastGenOutput>Model1.cs</LastGenOutput>
+      <DependentUpon>ModelOfis.edmx</DependentUpon>
+      <LastGenOutput>ModelOfis.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -139,6 +139,13 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include=".editorconfig" />
+    <EntityDeploy Include="Models\EntityFramework\ModelOfis.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ModelOfis.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\EntityFramework\ModelOfis.edmx.diagram">
+      <DependentUpon>ModelOfis.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.0.0-vsdoc.js" />
     <Content Include="Scripts\jquery-3.0.0.js" />
     <Content Include="Scripts\jquery-3.0.0.min.js" />
@@ -230,52 +237,38 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\DepartmanController.cs" />
-    <Compile Include="Controllers\OfisEntities1.cs" />
     <Compile Include="Controllers\PersonelController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\EntityFramework\Departman.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>ModelOfis.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\EntityFramework\Model1.Context.cs">
+    <Compile Include="Models\EntityFramework\ModelOfis.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.Context.tt</DependentUpon>
+      <DependentUpon>ModelOfis.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\EntityFramework\Model1.cs">
+    <Compile Include="Models\EntityFramework\ModelOfis.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>ModelOfis.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\EntityFramework\Model1.Designer.cs">
+    <Compile Include="Models\EntityFramework\ModelOfis.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Model1.edmx</DependentUpon>
+      <DependentUpon>ModelOfis.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\EntityFramework\Personel.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\EntityFramework\sp_helpdiagramdefinition_Result.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\EntityFramework\sp_helpdiagrams_Result.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>ModelOfis.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\EntityFramework\sysdiagrams.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
+      <DependentUpon>ModelOfis.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
-    <EntityDeploy Include="Models\EntityFramework\Model1.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\EntityFramework\Model1.edmx.diagram">
-      <DependentUpon>Model1.edmx</DependentUpon>
-    </Content>
     <None Include="packages.config" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Departman\Index.cshtml" />
