--- a/Ofis_ISE309.csproj
+++ b/Ofis_ISE309.csproj
@@ -266,6 +266,7 @@
       <DependentUpon>ModelOfis.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\PersonelFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -277,6 +278,7 @@
     <Content Include="Scripts\jquery-3.0.0.min.map" />
     <Content Include="Views\Departman\DepartmanForm.cshtml" />
     <Content Include="Views\Personel\Index.cshtml" />
+    <Content Include="Views\Personel\PersonelForm.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
