--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="4.4.1" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml" version="2.9.1" targetFramework="net48" />
+  <package id="Elasticsearch.Net" version="7.4.2" targetFramework="net48" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="jQuery" version="3.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
@@ -8,5 +10,10 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
+  <package id="NEST" version="7.4.2" targetFramework="net48" />
   <package id="popper.js" version="1.16.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net48" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.Packaging" version="4.5.0" targetFramework="net48" />
 </packages>
