--- a/Ofis_ISE309.csproj
+++ b/Ofis_ISE309.csproj
@@ -128,6 +128,7 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Ofis.css" />
     <Content Include="Global.asax" />
     <Content Include="Models\EntityFramework\ModelOfis.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
