--- a/packages.config
+++ b/packages.config
@@ -5,10 +5,12 @@
   <package id="Elasticsearch.Net" version="7.4.2" targetFramework="net48" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="jQuery" version="3.0.0" targetFramework="net48" />
+  <package id="jQuery.Validation" version="1.8.0.1" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net48" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="NEST" version="7.4.2" targetFramework="net48" />
   <package id="popper.js" version="1.16.0" targetFramework="net48" />
