--- a/Ofis_ISE309.csproj
+++ b/Ofis_ISE309.csproj
@@ -140,6 +140,8 @@
       <DependentUpon>ModelOfis.edmx</DependentUpon>
       <LastGenOutput>ModelOfis.cs</LastGenOutput>
     </Content>
+    <Content Include="Scripts\bootbox.js" />
+    <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
