--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootbox" version="4.3.0" targetFramework="net48" />
   <package id="bootstrap" version="4.4.1" targetFramework="net48" />
   <package id="DocumentFormat.OpenXml" version="2.9.1" targetFramework="net48" />
   <package id="Elasticsearch.Net" version="7.4.2" targetFramework="net48" />
