--- a/Ofis_ISE309.csproj
+++ b/Ofis_ISE309.csproj
@@ -287,15 +287,15 @@
     <Content Include="Content\DataTables\swf\flashExport.swf" />
     <Content Include="Content\Ofis.css" />
     <Content Include="Global.asax" />
-    <Content Include="Models\EntityFramework\ModelOfis.Context.tt">
+    <Content Include="Models\EntityFramework\OfisModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ModelOfis.edmx</DependentUpon>
-      <LastGenOutput>ModelOfis.Context.cs</LastGenOutput>
+      <DependentUpon>OfisModel.edmx</DependentUpon>
+      <LastGenOutput>OfisModel.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Models\EntityFramework\ModelOfis.tt">
+    <Content Include="Models\EntityFramework\OfisModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>ModelOfis.edmx</DependentUpon>
-      <LastGenOutput>ModelOfis.cs</LastGenOutput>
+      <DependentUpon>OfisModel.edmx</DependentUpon>
+      <LastGenOutput>OfisModel.cs</LastGenOutput>
     </Content>
     <Content Include="Scripts\bootbox.js" />
     <Content Include="Scripts\bootbox.min.js" />
@@ -400,16 +400,16 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include=".editorconfig" />
-    <EntityDeploy Include="Models\EntityFramework\ModelOfis.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>ModelOfis.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\EntityFramework\ModelOfis.edmx.diagram">
-      <DependentUpon>ModelOfis.edmx</DependentUpon>
-    </Content>
     <Content Include="Content\DataTables\css\semanticui.scss" />
     <Content Include="Content\DataTables\css\mixins.scss" />
     <Content Include="Content\DataTables\css\common.scss" />
+    <EntityDeploy Include="Models\EntityFramework\OfisModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>OfisModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\EntityFramework\OfisModel.edmx.diagram">
+      <DependentUpon>OfisModel.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.0.0-vsdoc.js" />
     <Content Include="Scripts\jquery-3.0.0.js" />
     <Content Include="Scripts\jquery-3.0.0.min.js" />
@@ -506,33 +506,38 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\DepartmanController.cs" />
+    <Compile Include="Controllers\KullanicisController.cs" />
+    <Compile Include="Controllers\OfisEntities2.cs" />
     <Compile Include="Controllers\PersonelController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\EntityFramework\Departman.cs">
-      <DependentUpon>ModelOfis.tt</DependentUpon>
+      <DependentUpon>OfisModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\EntityFramework\ModelOfis.Context.cs">
+    <Compile Include="Models\EntityFramework\Kullanici.cs">
+      <DependentUpon>OfisModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\EntityFramework\OfisModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ModelOfis.Context.tt</DependentUpon>
+      <DependentUpon>OfisModel.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\EntityFramework\ModelOfis.cs">
+    <Compile Include="Models\EntityFramework\OfisModel.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ModelOfis.tt</DependentUpon>
+      <DependentUpon>OfisModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\EntityFramework\ModelOfis.Designer.cs">
+    <Compile Include="Models\EntityFramework\OfisModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>ModelOfis.edmx</DependentUpon>
+      <DependentUpon>OfisModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\EntityFramework\Personel.cs">
-      <DependentUpon>ModelOfis.tt</DependentUpon>
+      <DependentUpon>OfisModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\EntityFramework\sysdiagrams.cs">
-      <DependentUpon>ModelOfis.tt</DependentUpon>
+      <DependentUpon>OfisModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\PersonelFormViewModel.cs" />
@@ -548,6 +553,11 @@
     <Content Include="Views\Departman\DepartmanForm.cshtml" />
     <Content Include="Views\Personel\Index.cshtml" />
     <Content Include="Views\Personel\PersonelForm.cshtml" />
+    <Content Include="Views\Kullanicis\Create.cshtml" />
+    <Content Include="Views\Kullanicis\Delete.cshtml" />
+    <Content Include="Views\Kullanicis\Details.cshtml" />
+    <Content Include="Views\Kullanicis\Edit.cshtml" />
+    <Content Include="Views\Kullanicis\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
