Authentication (Login) İşlemleri uygulandı.

--- a/Ofis_ISE309.csproj
+++ b/Ofis_ISE309.csproj
@@ -509,6 +509,7 @@
     <Compile Include="Controllers\KullanicisController.cs" />
     <Compile Include="Controllers\OfisEntities2.cs" />
     <Compile Include="Controllers\PersonelController.cs" />
+    <Compile Include="Controllers\SecurityController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -558,6 +559,7 @@
     <Content Include="Views\Kullanicis\Details.cshtml" />
     <Content Include="Views\Kullanicis\Edit.cshtml" />
     <Content Include="Views\Kullanicis\Index.cshtml" />
+    <Content Include="Views\Security\Login.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
