Authorization (Rolleme) işlemleri uygulandı.

--- a/Web.config
+++ b/Web.config
@@ -22,6 +22,11 @@
         
       </forms>
     </authentication>
+    <roleManager enabled="true" defaultProvider="testRoleProvider">
+      <providers>
+        <add name="testRoleProvider" type="Ofis_ISE309.Security.PersonelRoleProvider"/>
+      </providers>
+    </roleManager>
     
   </system.web>
   <runtime>
