--- a/Ofis_ISE309.csproj
+++ b/Ofis_ISE309.csproj
@@ -541,6 +541,7 @@
       <DependentUpon>OfisModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\PersonelRoleProvider.cs" />
     <Compile Include="ViewModels\PersonelFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
