--- a/packages.config
+++ b/packages.config
@@ -5,6 +5,8 @@
   <package id="DocumentFormat.OpenXml" version="2.9.1" targetFramework="net48" />
   <package id="Elasticsearch.Net" version="7.4.2" targetFramework="net48" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
+  <package id="Glimpse" version="1.8.6" targetFramework="net48" />
+  <package id="Glimpse.AspNet" version="1.9.2" targetFramework="net48" />
   <package id="jQuery" version="3.0.0" targetFramework="net48" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.8.0.1" targetFramework="net48" />
